[gd_scene load_steps=2 format=3 uid="uid://di6g2r07r273r"]

[ext_resource type="Script" uid="uid://duesguvewtua0" path="res://scenes/ui/cave_mansion_ui.gd" id="1_afvpm"]

[node name="CaveMansionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afvpm")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tiên Phủ"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Công Trình"

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BuildingListContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BuildingDetailsPanel" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BuildingNameLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Chọn một công trình"

[node name="BuildingLevelLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Cấp: -"

[node name="BuildingDescriptionLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Mô tả..."

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
layout_mode = 2

[node name="EffectsTitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Hiệu Quả Hiện Tại:"

[node name="EffectsContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
layout_mode = 2

[node name="UpgradeTitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Nâng Cấp Tiếp Theo:"

[node name="UpgradeCostContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/BuildingDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Nâng Cấp"

[node name="CloseButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Đóng"
